--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -92,6 +92,20 @@ dependencies {
     implementation "com.google.code.gson:gson:2.9.0"
 }
 
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
