--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -90,6 +90,14 @@ dependencies {
     // Microsoft Azure Translator
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.google.code.gson:gson:2.9.0"
+
+    // MapStruct
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+    annotationProcessor(
+            'org.projectlombok:lombok',
+            'org.projectlombok:lombok-mapstruct-binding:0.1.0'
+    )
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
