[REFACTORING] 리뷰 반영

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -93,17 +93,15 @@ dependencies {
 
     // MapStruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
-    annotationProcessor(
-            'org.projectlombok:lombok',
-            'org.projectlombok:lombok-mapstruct-binding:0.1.0'
-    )
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
+
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
 
 sourceSets {
-    main.java.srcDirs += [ querydslDir ]
+    main.java.srcDirs += [querydslDir]
 }
 
 tasks.withType(JavaCompile) {
