[FEAT] flyway 추가 및 V1__init.sql 초기 DB 세팅

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -96,6 +96,10 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
 
+    // Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
+
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
