--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ docker-compose.yml
 /src/main/resources/google_cloud_api_key.json
 /logs/*
 /user-api/logs/*
+user-api/src/main/java/com/biengual/userapi/test/*
