--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -100,6 +100,9 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
 
+    // Stanford CoreNLP
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.4'
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.4:models'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
