--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
+repositories {
+	mavenCentral()
+}
+
+springBoot {
+	mainClass.set("com.biengual.userapi.UserApiApplication")
+}
+
 subprojects {
 	group = 'com.biengual'
 	version = '0.0.1-SNAPSHOT'
