--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-groovy-templates'
 //    implementation 'org.webjars:webjars-locator-core'
 
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
     // Querydsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
