Refactor: Config 수정

--- a/user-api/src/main/resources/yml/application-dev.yml
+++ b/user-api/src/main/resources/yml/application-dev.yml
@@ -52,3 +52,7 @@ spring:
             authorization-grant-type: authorization_code
       success:
         redirect-uri: ${OAUTH2_SUCCESS_DEV_REDIRECTION_PATH}
+
+nlp:
+  model:
+    word2vec: ${WORD2VEC_MODEL_FILE_PATH}
