Fix: bootJar 설정 추가

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -129,6 +129,7 @@ tasks.named('test') {
 }
 
 tasks.named('bootJar') {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     enabled = true
 }
 
