--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -82,6 +82,7 @@ jobs:
             
             sudo docker run -d \
               -v ./biengual/user/logs:/biengual/logs \
+              -v ./biengual/word2vec/word2vec.txt:/biengual/word2vec.txt \
               -e PROFILES=prod \
               -p 8080:8080 \
               --name ${{ secrets.DOCKERHUB_CONTAINERNAME }} \
