[FEAT] 스프링 배치 및 포인트 기능 일부 추가

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     // StringUtils
     implementation 'org.apache.commons:commons-lang3:3.17.0'
 
+    // Batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+
     // Stanford CoreNLP
     implementation 'edu.stanford.nlp:stanford-corenlp:4.5.5'
     implementation 'edu.stanford.nlp:stanford-corenlp:4.5.5:models'
