--- a/user-api/src/main/resources/application.yml
+++ b/user-api/src/main/resources/application.yml
@@ -46,6 +46,10 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+# Spring Batch
+logging:
+  level:
+    org.springframework.batch: DEBUG
 
 # Swagger
 springdoc:
