Setting: 테스트 로깅 간편화

--- a/user-api/src/test/resources/application-test.yml
+++ b/user-api/src/test/resources/application-test.yml
@@ -20,3 +20,5 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+        ## 쿼리문을 보고 싶다면 true를 설정하거나 logback-test.xml에서 p6spy logger를 주석처리할 것
+        show_sql: false
