Test: 동시성 테스트 Redisson 분산 락 추가
- 가상 쿼리 + Redisson 분산 락을 사용한 동시성 테스트

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    testImplementation 'org.redisson:redisson-spring-boot-starter:3.27.0'
 
     // Querydsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
