[FEAT] Perplexity AI API 를 활용한 문제 생성 및 문제 조회, 정답 확인 API

--- a/user-api/src/main/resources/yml/application-dev.yml
+++ b/user-api/src/main/resources/yml/application-dev.yml
@@ -56,3 +56,7 @@ spring:
 nlp:
   model:
     word2vec: ${WORD2VEC_MODEL_FILE_PATH}
+
+perplexity:
+  api-key: ${PERPLEXITY_API_KEY}
+  base-url: https://api.perplexity.ai
