--- a/user-api/src/main/resources/yml/application-prod.yml
+++ b/user-api/src/main/resources/yml/application-prod.yml
@@ -56,3 +56,7 @@ spring:
 nlp:
   model:
     word2vec: ${WORD2VEC_MODEL_FILE_PATH}
+
+perplexity:
+  api-key: ${PERPLEXITY_API_KEY}
+  base-url: https://api.perplexity.ai
