Fix: yml 파일 127.0.0.1 을 localhost로 변경

--- a/user-api/src/test/resources/application-test.yml
+++ b/user-api/src/test/resources/application-test.yml
@@ -4,14 +4,14 @@ spring:
       on-profile: test
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/biengual_test_db
+    url: jdbc:mysql://localhost:3306/biengual_test_db
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   data:
     redis:
-      host: 127.0.0.1
+      host: localhost
       port: 6379
       password: 1234
       username: default
