Fix: yml 파일 Redis host를 환경변수로 실제 인스턴스 서버 IP로 받게끔 변경

--- a/user-api/src/main/resources/yml/application-dev.yml
+++ b/user-api/src/main/resources/yml/application-dev.yml
@@ -13,7 +13,7 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: ${REDIS_DEV_HOST}
       port: 6379
       password: ${DB_ROOT_PASSWORD}
       username: default
