--- a/biengual-core/build.gradle
+++ b/biengual-core/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 	// StringUtils
 	implementation 'org.apache.commons:commons-lang3:3.17.0'
 
+	// OpenSearch
+	// OpenSearch Java SDK (최신 방식)
+	implementation 'org.opensearch.client:opensearch-java:2.17.0'
 }
 
 tasks.named('test') {
