--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -115,8 +115,16 @@ dependencies {
     // Unirest
     implementation 'com.konghq:unirest-java:3.14.5'
 
-    // Elastic Search
-    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    // OpenSearch
+    // OpenSearch Java SDK (최신 방식)
+    implementation 'org.opensearch.client:opensearch-java:2.17.0'
+
+    // OpenSearch REST Client (필수)
+    implementation 'org.opensearch.client:opensearch-rest-client:2.17.0'
+
+    // Jackson 라이브러리 (JSON 직렬화/역직렬화)
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
