[FEAT] OpenSearch 로컬 및 개발 서버 세팅, 기본 데이터 저장, 삭제, 검색 기능 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,9 +53,9 @@ services:
     environment:
       - discovery.type=single-node # 단일 노드 설정
       - bootstrap.memory_lock=true # 메모리 잠금 활성화
-      - plugins.security.disabled=true
+      - plugins.security.disabled=true # username, password 필요 X
       - OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m # JVM 메모리 설정 (512MB)
-      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=admin
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPEN_SEARCH_ROOT_PASSWORD}
     ulimits:
       memlock:
         soft: -1
@@ -74,7 +74,7 @@ services:
     container_name: echall-opensearch-dashboards
     environment:
       - OPENSEARCH_HOSTS=http://opensearch-node1:9200
-      - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true
+      - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true # username, password 필요 X
     ports:
       - "5601:5601" # Dashboards UI 포트 매핑
     networks:
