[HOTFIX] OpenSearch 연결 문제 해결 - 포트 이슈

--- a/user-api/src/main/resources/yml/application-dev.yml
+++ b/user-api/src/main/resources/yml/application-dev.yml
@@ -63,7 +63,7 @@ perplexity:
 
 opensearch:
   host: ${OPEN_SEARCH_DEV_HOST}
-  port: ${OPEN_SEARCH_PORT}
+  port: ${OPEN_SEARCH_AWS_PORT}
   protocol: ${OPEN_SEARCH_HTTPS_PROTOCOL}
   username: ${OPEN_SEARCH_ROOT_USERNAME}
   password: ${OPEN_SEARCH_ROOT_PASSWORD}
