--- a/user-api/src/main/resources/yml/application-local.yml
+++ b/user-api/src/main/resources/yml/application-local.yml
@@ -65,3 +65,10 @@ opensearch:
   protocol: ${OPEN_SEARCH_HTTP_PROTOCOL}
   username: ${OPEN_SEARCH_ROOT_USERNAME} # OpenSearch 기본 관리자 계정 (보안 플러그인 활성화 시)
   password: ${OPEN_SEARCH_ROOT_USERNAME} # OpenSearch 기본 비밀번호 (보안 플러그인 활성화 시)
+
+localstack:
+  access-key : "biengual-local-s3-access"
+  secret-key : "biengual-local-s3-secret"
+cloud:
+  aws:
+    endpoint: localhost:4566
