[HOTFIX] PROD OpenSearch index 추가

--- a/user-api/src/main/resources/yml/application-dev.yml
+++ b/user-api/src/main/resources/yml/application-dev.yml
@@ -67,3 +67,4 @@ opensearch:
   protocol: ${OPEN_SEARCH_HTTPS_PROTOCOL}
   username: ${OPEN_SEARCH_ROOT_USERNAME}
   password: ${OPEN_SEARCH_ROOT_PASSWORD}
+  index: ${OPEN_SEARCH_DEV_INDEX}
