--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -127,6 +127,9 @@ dependencies {
 
     // AWS SDK
     implementation 'software.amazon.awssdk:s3:2.17.100'
+
+    // WebP
+    implementation 'org.sejda.imageio:webp-imageio:0.1.6'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
