[FEAT] DEV S3, Cloudfront(CDN) 로컬 테스트 완료

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -130,6 +130,9 @@ dependencies {
 
     // WebP
     implementation 'org.sejda.imageio:webp-imageio:0.1.6'
+
+    // S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
