--- a/user-api/src/main/resources/yml/application-local.yml
+++ b/user-api/src/main/resources/yml/application-local.yml
@@ -70,8 +70,9 @@ opensearch:
 localstack:
   access-key : ${LOCAL_TEST_KEY}
   secret-key : ${LOCAL_TEST_KEY}
-  bucket-name : ${LOCAL_STACK_BUCKET_NAME}
 cloud:
   aws:
     endpoint: http://s3.localhost.localstack.cloud:4566
+    s3:
+      bucket: ${LOCAL_STACK_BUCKET_NAME}
     # 동작하지 않는다면 http://localhost:4566 사용 및 LocalStackConfig 수정 필요
