[FEAT] DEV S3, Cloudfront(CDN) 로컬 테스트 완료

--- a/user-api/src/main/resources/yml/application-local.yml
+++ b/user-api/src/main/resources/yml/application-local.yml
@@ -76,3 +76,5 @@ cloud:
     s3:
       bucket: ${LOCAL_STACK_BUCKET_NAME}
     # 동작하지 않는다면 http://localhost:4566 사용 및 LocalStackConfig 수정 필요
+    cloudfront:
+      domain: no-cdn
