--- a/user-api/src/main/resources/application.yml
+++ b/user-api/src/main/resources/application.yml
@@ -46,6 +46,10 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+  batch:  # TODO: Spring Batch 다시 적용시 수정 필요
+    job:
+      enabled: false
+
 # Swagger
 springdoc:
   use-fqn: true # swagger 가 패키지를 포함해서 관리하게 하여 다른 디렉토리의 같은 클래스명을 구분하게 하기 위함
