[REFACTOR] Spring Batch 설정 삭제 및 북마크 추천 시스템 매주 월요일 자동 업데이트

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.17.0'
 
     // Batch
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    //implementation 'org.springframework.boot:spring-boot-starter-batch'
 
     // Stanford CoreNLP
     implementation 'edu.stanford.nlp:stanford-corenlp:4.5.5'
