[REFACTOR] CNN 및 Youtube 크롤링 자동화 완료

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -133,6 +133,9 @@ dependencies {
 
     // S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    // RSS
+    implementation 'com.rometools:rome:1.18.0';
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
